--- a/sobre.html
+++ b/sobre.html
@@ -9,6 +9,8 @@
 <main>
     <section>
         <h1>Sobre</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quo consequuntur minima? Nisi, dolor, deserunt quas doloribus a eligendi incidunt amet eos repellat, adipisci aperiam delectus eaque magnam impedit officiis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, dolor! Illum distinctio nulla optio fugiat dicta, facilis culpa dolorum laboriosam aperiam eligendi rerum ducimus dignissimos est atque! Eaque, amet cumque.</p>
+        
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi vitae nihil magni similique saepe tempore, omnis, dolores nemo quas distinctio aliquam illum rerum maxime consequatur impedit cum. Totam, sint accusantium? Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, ut. Nesciunt enim excepturi quibusdam? Doloribus aliquam, laboriosam dicta est molestias sit eius laborum repellat cumque earum, omnis porro eum obcaecati.</p>
         
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum atque facilis praesentium doloribus eius eligendi illo nesciunt, recusandae officiis labore quo deleniti velit dignissimos dolor aliquid similique quam quisquam voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, nam tempore in et quam sed laboriosam molestias sapiente soluta ea, quos adipisci ad. Fugit quod dolores alias neque iusto cupiditate!</p>
