--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Projeto colaborativo</h1>
+
+        <p>Harry Potter é uma série de sete romances de fantasia escrita pela autora britânica J. K. Rowling. A série narra as aventuras de um jovem chamado Harry James Potter, que descobre aos 11 anos de idade que é um bruxo ao ser convidado para estudar na Escola de Magia e Bruxaria de Hogwarts.</p>
     </header>
 </body>
 </html>
